--- a/style.css
+++ b/style.css
@@ -31,4 +31,10 @@ p {
 .background {
   background-image: url(/images/top-banner.png);
   background-repeat: no-repeat;
+  margin-bottom: 160px;
+}
+.background2 {
+  background-image: url(/images/dream-bg.png);
+  background-repeat: no-repeat;
+  background-position: right;
 }
