--- a/style.css
+++ b/style.css
@@ -38,3 +38,28 @@ p {
   background-repeat: no-repeat;
   background-position: right;
 }
+.border-apply {
+  box-shadow: 10px 10px 20px gray;
+  width: 40%;
+  margin: 5%;
+  padding: 20px;
+  height: 400px;
+  border-radius: 10px;
+}
+h2 {
+  font-size: 40px;
+}
+.experience-banner {
+  background-image: url(/images/exp-bg.png);
+  background-repeat: no-repeat;
+  margin-top: 0;
+}
+#border {
+  border-left: 7px solid salmon;
+}
+#left-border {
+  border-left: 7px solid black;
+}
+.footer {
+  text-align: center;
+}
